--- a/test.html
+++ b/test.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html><html lang="zh-CN"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>E‑LOVE 测试</title>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>E-LOVE 测试</title>
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 <link rel="stylesheet" href="assets/css/material.css">
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-</head><body>
-<div class="mdl-layout mdl-js-layout">
-<main class="mdl-layout__content" style="max-width:800px;margin:auto;padding:24px">
-<h3 class="mdl-typography--text-center">请选择最符合你的选项</h3>
-<form id="paper"></form>
-<button id="submitBtn" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" disabled>提交答案</button>
-</main></div>
+</head>
+<body>
+<main style="max-width:800px;margin:auto;padding:24px">
+  <form id="paper"></form>
+  <button id="submitBtn" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" disabled>提交答案</button>
+</main>
 <script src="assets/js/test.js"></script>
-</body></html>
+</body>
+</html>
