--- a/types.html
+++ b/types.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html><html lang="zh-CN"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>16 型百科</title>
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<link rel="stylesheet" href="assets/css/material.css">
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-</head><body>
+<link rel="stylesheet" href="assets/css/material.css">
+</head>
+<body>
 <div style="max-width:900px;margin:auto;padding:24px">
-<h3 class="mdl-typography--text-center">E‑LOVE 16 型快速索引</h3>
-<div id="grid" class="mdl-grid"></div>
+  <h3 class="mdl-typography--text-center">E-LOVE 16 型速查</h3>
+  <div id="grid" class="mdl-grid"></div>
 </div>
 <script src="assets/js/types.js"></script>
-</body></html>
+</body>
+</html>
