--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body class="mdl-typography--text-center">
 <header class="hero mdl-shadow--2dp">
-  <h1>E-LOVE 情感 MBTI</h1>
-  <p>40 题 · 洞察亲密关系中的你</p>
+  <h1>E-LOVE 情感 16 型人格</h1>
+  <p>40 题 · 五分钟洞察亲密关系</p>
   <a href="test.html" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">开始测试</a>
 </header>
 </body>
